--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,29 +3,74 @@
             xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="utf-8">
-    <title>User</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>User page</title>
 </head>
-<body>
-<div align="center">
-    <div sec:authorize="isAuthenticated()">
-        Welcome <b><span sec:authentication="name"></span></b>
-        &nbsp;
-        <span sec:authentication="principal.authorities"></span>
+<body class="bg-light">
+<header>
+    <nav class="navbar navbar-dark bg-dark px-2">
+        <div class="container-fluid">
+        <span class="navbar-brand">
+            <b><span th:text="${user.getUsername()}">Email</span></b>
+            with roles:
+            <span th:text="${user.getRolesAsString()}">Roles</span>
+        </span>
+            <span class="navbar-nav">
+                <a class="nav-link" th:href="@{/logout}">Logout</a>
+            </span>
+        </div>
+    </nav>
+</header>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-2 bg-white pt-3 px-3">
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link" th:href="@{/admin}">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" th:href="@{'/user/' + ${user.getId()}}">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-10 bg-light mt-3 px-3">
+            <h1>User information page</h1>
+            <div class="card mt-4">
+                <div class="card-header">
+                    <h4 class="m-2">About user</h4>
+                </div>
+                <div class="card-content table-responsive mx-4 my-2">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Age</th>
+                            <th>Email</th>
+                            <th>Role</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td th:text="${user.getId()}">ID</td>
+                            <td th:text="${user.getFirstName()}">FirstName</td>
+                            <td th:text="${user.getLastName()}">LastName</td>
+                            <td th:text="${user.getAge()}">Age</td>
+                            <td th:text="${user.getEmail()}">Email</td>
+                            <td th:text="${user.getRolesAsString()}">Roles</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
-<h2>User Profile</h2>
-<br/>
-<p th:text="${'ID:    ' + user.id}">...</p>
-<p th:text="${'First name:  ' + user.firstName}">...</p>
-<p th:text="${'Last name:  ' + user.lastName}">...</p>
-<p th:text="${'Age:  ' + user.age}">...</p>
-<p th:text="${'Email: ' + user.email}">...</p>
-<p th:text="${'Roles: ' + user.roles}">...</p>
-<br/><br/>
-<p>
-<form th:method="GET" th:action="@{/logout}">
-    <input type="submit" value="Logout">
-</form>
-<p>
 </div>
+
 </body>
+
 </html>
