--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <title>User page</title>
 </head>
 <body class="bg-light">
 <header>
-    <nav class="navbar navbar-dark bg-dark px-2">
+    <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
         <span class="navbar-brand">
             <b><span th:text="${user.getUsername()}">Email</span></b>
@@ -26,24 +26,24 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-2 bg-white pt-3 px-3">
+        <div class="col-2 bg-white">
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/admin}">Admin</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{'/user/' + ${user.getId()}}">User</a>
+                    <a class="nav-link active" href="#">User</a>
                 </li>
             </ul>
         </div>
-        <div class="col-sm-10 bg-light mt-3 px-3">
+        <div class="col-10 bg-light">
             <h1>User information page</h1>
-            <div class="card mt-4">
+            <div class="card">
                 <div class="card-header">
-                    <h4 class="m-2">About user</h4>
+                    <h4>About user</h4>
                 </div>
-                <div class="card-content table-responsive mx-4 my-2">
-                    <table class="table table-striped">
+                <div class="card-content table-responsive">
+                    <table class="table table-striped align-middle">
                         <thead>
                         <tr>
                             <th>ID</th>
@@ -70,7 +70,9 @@
         </div>
     </div>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
-
 </html>
